force-app/main/default/objects/Test_Account__c/Test_Account__c.object-meta.xml
<CustomObject>
    <label>Test_Account</label>
    <nameField>
        <displayFormat>Test_Account-{0}</displayFormat>
        <label>Test_Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test_Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>