force-app/main/default/objects/Test_Account__c/fields/CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress__c</fullName>
    <label>CompanyAddress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>